--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,3 +12,5 @@ steps:
   - 'https://${_LOCATION}-python.pkg.dev/$PROJECT_ID/${_REPOSITORY}/'
   - 'dist/*'
 
+options:
+  logging: CLOUD_LOGGING_ONLY
