--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
   entrypoint: pip
   args: ["install", "-r", "requirements.txt", "--user"]
 - name: python
-  entrypoint: poetry
+  entrypoint: /builder/home/.local/bin/poetry
   args: ["build"]
 - name: python
   entrypoint: python
