--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [tool.poetry]
 name = "gborelpy"
-version = "0.3.0"
+version = "0.4.0"
 description = "Python utilities for Gymshark python projects"
 authors = ["Gregoire Borel <gregoire.borel@neoxia.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-apache-beam = {extras = ["gcp"], version = "^2.54.0"}
+apache-beam = {extras = ["gcp"], version = "^2.57.0"}
+google-api-core = "^2.19.1"
 
 [build-system]
 requires = ["poetry-core"]
